# VarGenPath

./: LICENSE  README.md  README.rst  requirements.txt  setup.cfg
docs/source/: cli.rst  conf.py  index.rst  installation.rst  pipeline.rst  utils.rst
output/: test_session.cys
src/vargenpath/: __init__.py  __main__.py  cli.py  constants.py  pipeline.py  utils.py
tests/: test_utils.py
