########################
# Set up Configuration #
########################
[metadata]
name = vargenpath
version = 0.0.1
description =
long_description = file: README.md

url = https://github.com/AldisiRana/vargenpath

author = Rana Aldisi
author_email = aldisi.rana@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only

keywords =
    variants
    network
    pathway

[options]
install_requires =
    click
    pandas
    pybiomart
    py2cytoscape

zip_safe = false
python_requires = >= 3.5

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    vargenpath = vargenpath.cli:main
